--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.17.4",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
